--- a/main.css
+++ b/main.css
@@ -11,3 +11,27 @@
 .show {
     display: block;
 }
+.black-bg {
+    width : 100%;
+    height : 100%;
+    position : fixed;
+    background : rgba(0,0,0,0.5);
+    z-index : 5;
+    padding: 30px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1s;
+}
+.white-bg {
+    background: white;
+    border-radius: 5px;
+    padding: 30px;
+} 
+.login-btn {
+    display: none;
+}
+.show-modal {
+    display: block;
+    visibility: visible;
+    opacity: 1;
+}
