--- a/main.css
+++ b/main.css
@@ -35,3 +35,18 @@
     visibility: visible;
     opacity: 1;
 }
+.sales {
+    visibility: visible;
+}
+.slide-container {
+    width: 300vw;
+
+    transition: all 1s;
+  }
+  .slide-box {
+    width: 100vw;
+    float: left;
+  }
+  .slide-box img {
+    width: 100%;
+  } 
