--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+.navbar {
+    position : fixed;
+    width : 100%;
+    z-index : 5
+  }
+  .navbar-brand {
+    font-size : 30px;
+    transition : all 1s;
+  }
+
 .alert-box {
     background-color: skyblue;
     padding: 20px;
