--- a/main.css
+++ b/main.css
@@ -1,12 +1,16 @@
+#nav {
+  position: sticky;
+  top:0;
+}
 .navbar {
-    position : fixed;
+    top: 0;
     width : 100%;
     z-index : 5
   }
-  .navbar-brand {
+.navbar-brand {
     font-size : 30px;
     transition : all 1s;
-  }
+}
 
 .alert-box {
     background-color: skyblue;
@@ -15,11 +19,14 @@
     border-radius: 5px;
     display: block;
 }
-.list {
-    display: none;
+.list-group {
+  display:none;
+  visibility: hidden;
+  position: sticky;
 }
 .show {
     display: block;
+    visibility: visible;
 }
 .black-bg {
     width : 100%;
